@@ -22,3 +22,4 @@ x20 = { 'H', 'e', 'l', }
 x21 = { 'H', 'e', 'l', 'l', 'o', '!', 0, 0, 0, 0, }
 x22 ok
 x23 = { hd = 8, tl = ok }
+x24[6] = { '/', '*', 'B', '*', '/', 0, }
