@@ -57,6 +57,10 @@ char * x22 = &(x10.u.y);
 /* Initializer can refer to ident just declared */
 struct list { int hd; struct list * tl; } x23 = { sizeof(x23), &x23 };
 
+/* Watch out for aliases of char types */
+typedef unsigned char byte;
+byte x24[] = "/*B*/";
+
 static void print_chars(char * s, int sz)
 {
   int i;
@@ -120,6 +124,9 @@ int main()
     printf("x22 error\n");
   printf("x23 = { hd = %d, tl = %s }\n",
          x23.hd, x23.tl == &x23 ? "ok" : "ERROR");
+  printf("x24[%d] = { ", (int) sizeof(x24));
+  print_chars((char *) x24, sizeof(x24));
+  printf("}\n");
   return 0;
 }
 
